chore(locales): remove legacy _locales/zh (migrated to zh-CN/zh-TW)

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,4 +1,13 @@
 {
+  "extensionName": {
+    "message": "PixTab"
+  },
+  "extensionDescription": {
+    "message": "Display beautiful Pixiv illustrations on your new tab"
+  },
+  "actionTitle": {
+    "message": "Pix Tab"
+  },
   "settingsHeading": {
     "message": "Settings"
   },
