“更新模式”新增“指定画师”

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -59,6 +59,15 @@
   "originalRankingOrder": {
     "message": "Original Ranking"
   },
+  "artistOrder": {
+    "message": "Specific Artist"
+  },
+  "artistIdLabel": {
+    "message": "Artist ID"
+  },
+  "artistIdHelper": {
+    "message": "Enter artist IDs, separated by commas"
+  },
   "modeLabel": {
     "message": "NSFW Display"
   },
