Add Pixiv account login, following, bookmarks, and ugoira support
This update introduces Pixiv account login detection, new filter modes for following, bookmarks, and recommendations (login required), and a fallback mode for when login is unavailable. The options panel now displays login status and allows users to select a fallback mode. Ugoira (animated) support is added for new tab wallpapers, including background fetching and playback. Localization files, manifest, and build scripts are updated accordingly.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -68,6 +68,57 @@
   "artistIdHelper": {
     "message": "Enter artist IDs, separated by commas"
   },
+  "followingOrder": {
+    "message": "Following (Login Required)"
+  },
+  "bookmarksOrder": {
+    "message": "Bookmarks (Login Required)"
+  },
+  "recommendationsOrder": {
+    "message": "Recommendations (Login Required)"
+  },
+  "pixivAccountSection": {
+    "message": "Pixiv Account"
+  },
+  "loginStatusLabel": {
+    "message": "Login Status"
+  },
+  "loginStatusLoggedIn": {
+    "message": "Logged In"
+  },
+  "loginStatusNotLoggedIn": {
+    "message": "Not Logged In"
+  },
+  "loginButton": {
+    "message": "Login"
+  },
+  "loginFallbackModeLabel": {
+    "message": "Fallback Mode"
+  },
+  "fallbackDailyRanking": {
+    "message": "Daily Ranking"
+  },
+  "fallbackWeeklyRanking": {
+    "message": "Weekly Ranking"
+  },
+  "fallbackMonthlyRanking": {
+    "message": "Monthly Ranking"
+  },
+  "fallbackRookieRanking": {
+    "message": "Rookie Ranking"
+  },
+  "fallbackOriginalRanking": {
+    "message": "Original Ranking"
+  },
+  "fallbackPopularD": {
+    "message": "Sort by Popularity"
+  },
+  "fallbackPopularMaleD": {
+    "message": "Popular Among Males"
+  },
+  "fallbackPopularFemaleD": {
+    "message": "Popular Among Females"
+  },
   "modeLabel": {
     "message": "NSFW Display"
   },
