--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -68,6 +68,57 @@
     "artistIdHelper": {
         "message": "请输入画师ID，多个ID请用英文逗号分隔"
     },
+    "followingOrder": {
+        "message": "关注订阅（需登录）"
+    },
+    "bookmarksOrder": {
+        "message": "收藏（需登录）"
+    },
+    "recommendationsOrder": {
+        "message": "推荐（需登录）"
+    },
+    "pixivAccountSection": {
+        "message": "Pixiv 账号"
+    },
+    "loginStatusLabel": {
+        "message": "登录状态"
+    },
+    "loginStatusLoggedIn": {
+        "message": "已登录"
+    },
+    "loginStatusNotLoggedIn": {
+        "message": "未登录"
+    },
+    "loginButton": {
+        "message": "登录"
+    },
+    "loginFallbackModeLabel": {
+        "message": "回滚模式"
+    },
+    "fallbackDailyRanking": {
+        "message": "每日排行榜"
+    },
+    "fallbackWeeklyRanking": {
+        "message": "每周排行榜"
+    },
+    "fallbackMonthlyRanking": {
+        "message": "每月排行榜"
+    },
+    "fallbackRookieRanking": {
+        "message": "新人排行榜"
+    },
+    "fallbackOriginalRanking": {
+        "message": "原创排行榜"
+    },
+    "fallbackPopularD": {
+        "message": "按热门度排序"
+    },
+    "fallbackPopularMaleD": {
+        "message": "受男性欢迎"
+    },
+    "fallbackPopularFemaleD": {
+        "message": "受女性欢迎"
+    },
     "modeLabel": {
         "message": "NSFW展示"
     },
