Add proxy URL support and advanced settings UI
Introduces a new advanced settings section in the options page, allowing users to configure a custom proxy URL for Pixiv API requests. Updates localization files for all supported languages with new labels and helper text. Refactors backend logic to use the proxy URL for API endpoints when set, and updates preferences and options handling to persist the new setting.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -271,5 +271,14 @@
   },
   "reset": {
     "message": "Reset to default settings"
+  },
+  "advancedSettingsLabel": {
+    "message": "Advanced Settings"
+  },
+  "proxyUrlLabel": {
+    "message": "Proxy URL"
+  },
+  "proxyUrlHelper": {
+    "message": "Configure a reverse proxy URL for Pixiv API. Leave empty to use the default."
   }
 }
