--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -275,10 +275,10 @@
     "advancedSettingsLabel": {
         "message": "高级设置"
     },
-    "proxyUrlLabel": {
-        "message": "代理地址"
+    "reverseProxyDomainLabel": {
+        "message": "使用反向代理"
     },
-    "proxyUrlHelper": {
-        "message": "配置 Pixiv API 反向代理地址，留空使用默认地址。"
+    "reverseProxyDomainHelper": {
+        "message": "加速某些地区的图片下载。输入代理域名（如 i.pixiv.re、i.pixiv.cat、i.pixiv.nl）或留空不启用。"
     }
 }
